# tuto_doc_python

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst
test/: test_valid.py
